2008-04-04  Mike Kestner  <mkestner@novell.com>

	* atk/Object.custom: take out a ref on the return value of
	OnRefChild.  Also add some null guarding and default to IntPtr.Zero
	on exceptions.

2008-04-01  Mike Kestner  <mkestner@novell.com>

	* generator/InterfaceGen.cs: support "generic" interface
	implementations like those exposed by gio.  This is specifically for
	libraries which return GTypes which are not exposed by the library
	but which implement GInterfaces which are exposed by the library.

2008-03-28  Andres G. Aragoneses  <aaragoneses@novell.com>

	* atk/Object.custom: custom properties for overriding class methods.
	* atk/Makefile.am: include Object.custom.
	* atk/glue/object.c: glue to override class methods.
	* atk/glue/Makefile.am: include object.c.

2008-03-27  Andres G. Aragoneses  <aaragoneses@novell.com>

	* glib/Program.cs: Add new static class for utility property, moving
	the code to call g_set_prgname() from gtk/Application.cs to here,
	and changing return value of g_set_program_name from bool to void.
	* gtk/Application.cs: Use Program.Name as a replacement of 
	calling the native function g_set_prgname().
	* glib/Makefile.am: add Program.cs.

2008-03-21  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.12: bump svn version
	* generator/CallbackGen.cs: add dnotify support to invoker.
	Store and respond with incoming UserData params. Start using 
	__prefixed private vars to avoid collisions with parameters, 
	like the 'result' params in gio.
	* generator/ManagedCallString.cs: use new data/dnotify invoker
	ctors.
	* generator/MethodBody.cs:
	* generator/Parameters.cs: don't link "out" length params to 
	preceding strings.
	* generator/VMSignature.cs: don't require UserData to be last
	param, since it can have things like error after it.

2008-03-21  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata: s/GtkDestroyNotify/GDestroyNotify in vms too.

2008-03-14  Mike Kestner  <mkestner@novell.com>
