@@ -1,5 +1,14 @@
 2008-04-04  Mike Kestner  <mkestner@novell.com>
 
+	* atk/Atk.metadata: markup all the Ref* methods to indicate owned refs.
+	* generator/ReturnValue.cs: Add owned object ToNative handling.
+	* generator/VirtualMethod.cs: Split ToNative call from managed method
+	invocation to avoid duplicate calls in null checking scenarios.
+	* glib/Object.cs: add OwnedHandle property for use by language binding
+	code which needs to pass owned refs to native methods.
+
+2008-04-04  Mike Kestner  <mkestner@novell.com>
+
 	* atk/Object.custom: take out a ref on the return value of
 	OnRefChild.  Also add some null guarding and default to IntPtr.Zero
 	on exceptions.
